figured out module syntax that worked for Netty. back to modules!